fixing yet another mistake

--- a/David Tong GR/ch2_notes_exercises.ipynb
+++ b/David Tong GR/ch2_notes_exercises.ipynb
@@ -104,8 +104,7 @@
     "\n",
     "\\begin{align} \n",
     "&\\text{If } X^\\mu=(y,-x) \\text{then we have} X = yx\\hat{\\textbf{x}}-yx\\hat{\\textbf{y}}\\\\\n",
-    "&\\text{Thus we have}\\quad X^\\mu(t) = \\frac{dx^\\mu(t)}{dt}\\\\\n",
-    "&\\text{Substituting yields}\\quad X = \\frac{\\partial y}{\\partial t}\\hat{x}-\\frac{\\partial x}{\\partial t}\\hat{y} = \\hat{x}-\\hat{y}\n",
+    "&\\text{Similarly, if }\n",
     "\\end{align}   "
    ]
   },
@@ -117,8 +116,10 @@
     "\n",
     "\\begin{align} \n",
     "&\\text{If } X^\\mu=(x-y,x+y) \\text{ then we can choose the parameterization }\\quad y(t)=x(t)=t \\\\\n",
-    "&\\text{Thus we have}\\quad X^\\mu(t) = \\frac{dx^\\mu(t)}{dt}\\\\\n",
-    "&\\text{Substituting yields}\\quad X = [\\frac{\\partial x}{\\partial t}-\\frac{\\partial y}{\\partial t}]\\hat{x}+[\\frac{\\partial x}{\\partial t}+\\frac{\\partial y}{\\partial t}]\\hat{y} = 2\\hat{y}\n",
+    "& X^1 = x-y = \\frac{dx^1(\\sigma(t))}{dt}\\quad X^2 = x+y=\\frac{dx^2(\\sigma(t))}{dt}\\\\\n",
+    "&\\text{Since this should not depend on }\\sigma\\text{ we take}\\quad \\sigma(t)=t\\\\\n",
+    "& X^1 = x-y = \\frac{dx^1(t)}{dt}\\quad X^2 = x+y=\\frac{dx^2(t)}{dt}\\\\\n",
+    "&\\text{Integrating}\\quad X^\\mu = (\\int x-ydt, \\int x+ydt) = (C, t^2+C) \n",
     "\\end{align}   "
    ]
   },
