--- a/David Tong GR/ch2_notes_exercises.ipynb
+++ b/David Tong GR/ch2_notes_exercises.ipynb
@@ -100,27 +100,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1a\n",
-    "\n",
+    "# Exercise 1\n",
+    "We take all constants of integration to be 0.\n",
     "\\begin{align} \n",
-    "&\\text{If } X^\\mu=(y,-x) \\text{then we have} X = yx\\hat{\\textbf{x}}-yx\\hat{\\textbf{y}}\\\\\n",
-    "&\\text{Similarly, if }\n",
-    "\\end{align}   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 1b\n",
-    "\n",
-    "\\begin{align} \n",
-    "&\\text{If } X^\\mu=(x-y,x+y) \\text{ then we can choose the parameterization }\\quad y(t)=x(t)=t \\\\\n",
-    "& X^1 = x-y = \\frac{dx^1(\\sigma(t))}{dt}\\quad X^2 = x+y=\\frac{dx^2(\\sigma(t))}{dt}\\\\\n",
-    "&\\text{Since this should not depend on }\\sigma\\text{ we take}\\quad \\sigma(t)=t\\\\\n",
-    "& X^1 = x-y = \\frac{dx^1(t)}{dt}\\quad X^2 = x+y=\\frac{dx^2(t)}{dt}\\\\\n",
-    "&\\text{Integrating}\\quad X^\\mu = (\\int x-ydt, \\int x+ydt) = (C, t^2+C) \n",
-    "\\end{align}   "
+    "&\\text{Recall that}\\quad X_p=X^\\mu\\partial_\\mu|_p\\\\\n",
+    "&\\text{Then the flow is} \\int X_p dt = \\int \\partial_\\mu|_pdtX^\\mu\\\\\n",
+    "&\\text{If } X^\\mu=(y,-x) \\text{then we have} x=yt+y_0\\quad,\\quad y=-xt-x_0\\\\\n",
+    "& x = \\int ydt \\quad y = -\\int xdt\\quad\\therefore\\quad y = -\\int\\int ydtdt\\\\\n",
+    "&\\frac{d^2y}{dt^2} = -y\\quad\\therefore\\quad y = \\sin(t+t_0)+ct+c_1\\\\\n",
+    "&\\text{Substituting yields}\\quad x=\\int ydt = -\\cos(t+t_0)+\\frac{c}{2}t^2+tc_1+c_2\\\\\n",
+    "&\\text{Transforming into polar coordinates}\\quad r=\\sqrt{x^2+y^2}= 1\\quad \\theta=-t\n",
+    "\\end{align}   \n",
+    "Now for the second vector field\n",
+    "\\begin{align}\n",
+    "&\\text{Similarly, if instead}\\quad X^\\mu=(x-y, x+y)\\quad\\therefore\\quad \n",
+    "\\frac{dx}{dt} = x-y\\quad \\frac{dy}{dt} = x+y\\\\ \n",
+    "&\\text{Substitute}\\quad\\frac{dy}{dt} = \\frac{dx}{dt}+2y\\quad\\text{integrate}\\quad y=x+2yt\\quad x=y(1-2t)\\\\\n",
+    "&r\\sin(\\theta) = r\\cos(\\theta)+2r\\sin(\\theta)t\\quad\\therefore t = 1-\\frac{\\cos(\\theta)}{2\\sin\\theta}\\\\\n",
+    "&\\text{Since}\\quad t=\\frac{2-x}{2y}\\text{Now we have}\\quad r=y\\sqrt{1+(1-2t)^2}\\\\\n",
+    "\\end{align}"
    ]
   },
   {
@@ -128,7 +126,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import "
+   ]
   }
  ],
  "metadata": {
