took some more notes

--- a/Differential Geometry/notes_exercises.ipynb
+++ b/Differential Geometry/notes_exercises.ipynb
@@ -4,9 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Redefining Vectors \n",
+    "\n",
+    "page 23\n",
+    "\n",
+    "# Integral Curves\n",
+    "\n",
+    "Consider a bunch of curves in the immediate vicinity of point $P$ up to order $\\epsilon$. We may consider a vector $V_P$ to to be the equivalence class of curves in which each representative of this class is equivalent since we are only considering up to order (I think of this as distance) $\\epsilon$.\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\dot{\\gamma} = V\\quad\\quad \\dot{\\gamma}(P) = V_P\n",
+    "\\end{align}\n",
+    "where $\\gamma$ is the integral curve of a vector $V$. The tangent vector of the curve $\\gamma$ at point $P$ is $\\dot{y}(P)$, which is the same as the equivalence class $[\\gamma]$ given by the curve $\\gamma$ at the point $P.$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Ch 4: Lie Derivatives \n",
     "\n",
-    "A vector field divides a manifold into a system of integral curves. Recall how in multivariable calculus, you can define multivariable functions parametrically. Now we also define each point $P$ in the manifold $M$, that is $P\\in M$ to move depending on $t$ along some integral curve that can be different for each point. This is the map\n",
+    "A vector field divides a manifold into a system of integral curves. Recall how in multivariable calculus, you can define multivariable functions parametrically. Now we also define each point $P$ in the manifold $M$, $P\\in M$, to move depending on $t$ along some integral curve that can be different for each point. This is the map\n",
     "\\begin{align}\n",
     "\\Phi_t : M\\to M\\quad\\quad P\\equiv \\gamma(t_0)\\to \\gamma(t_0+t)\n",
     "\\end{align} \n",
@@ -41,6 +59,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hamiltonian Mechanics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can intepret Hamiltonian mechanics as something called a sympletic structure on a manifold.\n",
+    "\n",
+    "Problem 2.3.7 details that the Hamilton equations \n",
+    "\\begin{align}\n",
+    "\\dot{q}^a = \\frac{\\partial H}{\\partial p_a}\\quad\\quad \\dot{p}^a = -\\frac{\\partial H}{\\partial q^a}\\quad\\quad a=1,...,n\n",
+    "\\end{align}\n",
+    "\n",
+    "can be viewed as field equations for integral curves of the following vector field on $\\mathbb{R}^{2n}[q^a, p_a]$\n",
+    "\\begin{align}\n",
+    "\\zeta_H = \\frac{\\partial H}{\\partial p_a}\\frac{\\partial }{\\partial q^a} - \\frac{\\partial H}{\\partial q^a}\\frac{\\partial}{\\partial p_a}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
