making edits from portable monitor and raspberry pi

--- a/Differential Geometry/notes_exercises.ipynb
+++ b/Differential Geometry/notes_exercises.ipynb
@@ -26,6 +26,8 @@
    "metadata": {},
    "source": [
     "## 2.2.1\n",
+    "testing this edit is from a raspberry pi\n",
+    "\n",
     "i) Since in the definition we gave for two curves to be tangent we used arbitrary local coordinates, this does not depend on the choice of local coordinates.\n",
     "ii) A binary relation is an equivalence relation iff it is transitive, reflexive, and symmetric. This is true for the first criterion that $\\gamma_1(0)=\\gamma_2(0)=P$. Now let us see if this is true for the second criterion. It is clearly symmetric and reflective, and since if \n",
     "\\begin{align}\n",
